Add a counter round and behaviour to keep track of the sum of executions happened

--- a/packages/valory/skills/hello_world_abci/fsm_specification.yaml
+++ b/packages/valory/skills/hello_world_abci/fsm_specification.yaml
@@ -12,6 +12,7 @@ start_states:
 states:
 - CollectRandomnessRound
 - PrintMessageRound
+- ExecutionCounterRound
 - RegistrationRound
 - ResetAndPauseRound
 - SelectKeeperRound
@@ -22,6 +23,9 @@ transition_func:
     (CollectRandomnessRound, ROUND_TIMEOUT): CollectRandomnessRound
     (PrintMessageRound, DONE): ResetAndPauseRound
     (PrintMessageRound, ROUND_TIMEOUT): RegistrationRound
+    (RegistrationRound, DONE): CollectRandomnessRound
+    (ExecutionCounterRound, DONE): ResetAndPauseRound
+    (ExecutionCounterRound, ROUND_TIMEOUT): RegistrationRound
     (RegistrationRound, DONE): CollectRandomnessRound
     (ResetAndPauseRound, DONE): CollectRandomnessRound
     (ResetAndPauseRound, NO_MAJORITY): RegistrationRound
